--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,10 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.derby.jar=/home/luiz/conectores/derby.jar
+file.reference.derbyclient.jar=/home/luiz/conectores/derbyclient.jar
+file.reference.hsqldb.jar=/home/luiz/conectores/hsqldb.jar
+file.reference.sqltool.jar=/home/luiz/conectores/sqltool.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.deploy.on.save=true
@@ -35,7 +39,10 @@ j2ee.platform.classpath=${j2ee.server.home}/lib/tomcat-jdbc.jar:${j2ee.server.ho
 j2ee.server.type=Tomcat
 jar.compress=false
 javac.classpath=\
-    ${libs.eclipselink.classpath}
+    ${file.reference.hsqldb.jar}:\
+    ${file.reference.sqltool.jar}:\
+    ${file.reference.derby.jar}:\
+    ${file.reference.derbyclient.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
